--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/cppSharp.png" alt="C++ / C#" />
+              <img class="card-img-bottom" loading="lazy" src="./src/cppSharp.png" alt="C++ / C#" />
               <div class="card-body">
                 <h5 class="card-title">C++ / C#</h5>
                 <p class="card-text">Объекто-ориентированные языки программирования промежуточного уровня.</p>
@@ -159,7 +159,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/bd.png" alt="Structured Query Language" />
+              <img class="card-img-bottom" loading="lazy" src="./src/bd.png" alt="Structured Query Language" />
               <div class="card-body">
                 <h5 class="card-title">SQL</h5>
                 <p class="card-text">Декларативный язык программирования, применяемый для управления данными в реляционной базе данных.</p>
@@ -171,7 +171,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/Python.png" alt="Python" />
+              <img class="card-img-bottom" loading="lazy" src="./src/Python.png" alt="Python" />
               <div class="card-body">
                 <h5 class="card-title">Python</h5>
                 <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C.</p>
@@ -217,19 +217,19 @@
     </div>
     <div class="main" style="padding-top: 2rem">
       <div class="dsc">
-        <img src="./src/eth.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/eth.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Блокчейн</h2>
         <h3 class="h3d">Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</h3>
         <hr class="hr" style="margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
-        <img src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Web разработка</h2>
         <h3 class="h3d">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</h3>
         <hr class="hr" style="margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
-        <img src="./src/meow.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/meow.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Котики</h2>
         <h3 class="h3d">Лол, здесь нужно что-то объяснять? Котики классные.</h3>
       </div>
@@ -255,7 +255,7 @@
             <div class="col-sm-8 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
-                  <img class="card-img-bottom" src="./src/gh.png" alt="GitHub preview pic" />
+                  <img class="card-img-bottom" loading="lazy" src="./src/gh.png" alt="GitHub preview pic" />
                   <div class="card-body">
                     <h5 class="card-title">Репозиторий Github</h5>
                     <p class="card-text">Жмякни сюда. Все исходники находятся здесь :)</p>
@@ -300,7 +300,7 @@
     </div>
     <div class="main" style="margin-bottom: -2rem; padding-top: 2rem">
       <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
-      <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
+      <img loading="lazy" src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
       <p></p>
       <hr class="hr" />
     </div>
