--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:site_name" content="Арсений Котиков" />
-    <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/web_preview.png" />
-    <meta property="og:image" content="https://kotikov.pages.dev/src/web_preview.png" />
-    <meta name="twitter:card" content="https://kotikov.pages.dev/src/web_preview.png" />
+    <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/index/web_preview.png" />
+    <meta property="og:image" content="https://kotikov.pages.dev/src/index/web_preview.png" />
+    <meta name="twitter:card" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta property="vk:image" content="https://kotikov.pages.dev/src/web_preview_VK.png" />
-    <link rel="image_src" href="https://kotikov.pages.dev/src/web_preview.png" />
+    <meta property="vk:image" content="https://kotikov.pages.dev/src/index/web_preview_VK.png" />
+    <link rel="image_src" href="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,9 +25,9 @@
     <title>Добро пожаловать</title>
   </head>
   <body class="bd">
-    <img src="./src/mobile.png" style="display: none" />
-    <img src="./src/mobile_red.png" style="display: none" />
-    <img src="./src/mobile_orange.png" style="display: none" />
+    <img src="./src/index/index/index/mobile.png" style="display: none" />
+    <img src="./src/index/index/mobile_red.png" style="display: none" />
+    <img src="./src/index/index/mobile_orange.png" style="display: none" />
     <nav class="navbar">
       <div class="mx-auto my-2 order-1 order-md-1 position-relative">
         <span class="animatedtext-content">
@@ -42,17 +42,17 @@
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/mobile.png" style="width: 100%" />
+          <img src="./src/index/mobile.png" style="width: 100%" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/mobile_red.png" style="width: 100%" class="" />
+          <img src="./src/index/mobile_red.png" style="width: 100%" class="" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/mobile_orange.png" style="width: 100%" />
+          <img src="./src/index/mobile_orange.png" style="width: 100%" />
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-top" src="./src/JS.png" alt="Javascript" />
+              <img class="card-img-top" src="./src/index/index/JS.png" alt="Javascript" />
               <div class="card-body">
                 <h5 class="card-title">Javascript</h5>
                 <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
@@ -82,7 +82,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/CSS.png" alt="Cascading Style Sheets" />
+              <img class="card-img-bottom" src="./src/index/index/CSS.png" alt="Cascading Style Sheets" />
               <div class="card-body">
                 <h5 class="card-title">CSS</h5>
                 <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/HTML.png" alt="HyperText Markup Language" />
+              <img class="card-img-bottom" src="./src/index/index/HTML.png" alt="HyperText Markup Language" />
               <div class="card-body">
                 <h5 class="card-title">HTML</h5>
                 <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
@@ -147,7 +147,7 @@
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" loading="lazy" src="./src/cppSharp.png" alt="C++ / C#" />
+              <img class="card-img-bottom" loading="lazy" src="./src/index/cppSharp.png" alt="C++ / C#" />
               <div class="card-body">
                 <h5 class="card-title">C++ / C#</h5>
                 <p class="card-text">Объекто-ориентированные языки программирования промежуточного уровня.</p>
@@ -159,7 +159,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" loading="lazy" src="./src/bd.png" alt="Structured Query Language" />
+              <img class="card-img-bottom" loading="lazy" src="./src/index/bd.png" alt="Structured Query Language" />
               <div class="card-body">
                 <h5 class="card-title">SQL</h5>
                 <p class="card-text">Декларативный язык программирования, применяемый для управления данными в реляционной базе данных.</p>
@@ -171,7 +171,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" loading="lazy" src="./src/Python.png" alt="Python" />
+              <img class="card-img-bottom" loading="lazy" src="./src/index/Python.png" alt="Python" />
               <div class="card-body">
                 <h5 class="card-title">Python</h5>
                 <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C.</p>
@@ -217,19 +217,19 @@
     </div>
     <div class="main" style="padding-top: 2rem">
       <div class="dsc">
-        <img loading="lazy" src="./src/eth.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/index/eth.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Блокчейн</h2>
         <h3 class="h3d">Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</h3>
         <hr class="hr" style="margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./src/web.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/index/web.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Web разработка</h2>
         <h3 class="h3d">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</h3>
         <hr class="hr" style="margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./src/meow.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/index/meow.png" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Котики</h2>
         <h3 class="h3d">Лол, здесь нужно что-то объяснять? Котики классные.</h3>
       </div>
@@ -245,7 +245,7 @@
           <div class="row">
             <div class="col-sm-4 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-                <img class="card-img-top" src="./src/like.png" alt="просто пикча" />
+                <img class="card-img-top" src="./src/index/like.png" alt="просто пикча" />
                 <div class="card-body">
                   <h5 class="card-title">Понравился сайт? :D</h5>
                   <p class="card-text">У него открытый исходный код, который размещён на GitHub.</p>
@@ -255,7 +255,7 @@
             <div class="col-sm-8 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
-                  <img class="card-img-bottom" loading="lazy" src="./src/gh.png" alt="GitHub preview pic" />
+                  <img class="card-img-bottom" loading="lazy" src="./src/index/gh.png" alt="GitHub preview pic" />
                   <div class="card-body">
                     <h5 class="card-title">Репозиторий Github</h5>
                     <p class="card-text">Жмякни сюда. Все исходники находятся здесь :)</p>
@@ -300,7 +300,7 @@
     </div>
     <div class="main" style="margin-bottom: -2rem; padding-top: 2rem">
       <h3 class="h3 text-center">А пока посмотрите на моего котика:)</h3>
-      <img loading="lazy" src="./src/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
+      <img loading="lazy" src="./src/index/cat.jpg" class="rounded mx-auto d-block" alt="котек" width="700rem" style="max-width: 80%" />
       <p></p>
       <hr class="hr" />
     </div>
@@ -416,6 +416,19 @@
           scrollHorizontal: false,
         });
       });
+    </script>
+    <script>
+      function msieversion() {
+        var ua = window.navigator.userAgent;
+        var msie = ua.indexOf("MSIE ");
+
+        if (msie > 0) {
+          window.location.href = "IE-warning.html";
+        } // If another browser, return 0
+
+        return false;
+      }
+      msieversion();
     </script>
   </body>
 </html>
