--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-top" src="./src/index/index/JS.png" alt="Javascript" />
+              <img class="card-img-top" src="./src/index/JS.png" alt="Javascript" />
               <div class="card-body">
                 <h5 class="card-title">Javascript</h5>
                 <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
@@ -82,7 +82,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/index/index/CSS.png" alt="Cascading Style Sheets" />
+              <img class="card-img-bottom" src="./src/index/CSS.png" alt="Cascading Style Sheets" />
               <div class="card-body">
                 <h5 class="card-title">CSS</h5>
                 <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/index/index/HTML.png" alt="HyperText Markup Language" />
+              <img class="card-img-bottom" src="./src/index/HTML.png" alt="HyperText Markup Language" />
               <div class="card-body">
                 <h5 class="card-title">HTML</h5>
                 <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
