--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <title>Добро пожаловать</title>
   </head>
   <body class="bd">
-    <img src="./src/index/index/index/mobile.png" style="display: none" />
-    <img src="./src/index/index/mobile_red.png" style="display: none" />
-    <img src="./src/index/index/mobile_orange.png" style="display: none" />
+    <img src="./src/index/mobile.png" style="display: none" />
+    <img src="./src/index/mobile_red.png" style="display: none" />
+    <img src="./src/index/mobile_orange.png" style="display: none" />
     <nav class="navbar">
       <div class="mx-auto my-2 order-1 order-md-1 position-relative">
         <span class="animatedtext-content">
