--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/inst.png" alt="Основной аккаунт." />
                     <div class="card-body">
-                      <h5 class="card-title">Intagram</h5>
+                      <h5 class="card-title">Instagram</h5>
                       <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
                       <p class="card-text">Основной аккаунт.</p>
                     </div>
@@ -324,7 +324,7 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.png" alt="Фотошопы капибар." />
                     <div class="card-body">
-                      <h5 class="card-title">Intagram</h5>
+                      <h5 class="card-title">Instagram</h5>
                       <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
                       <p class="card-text">Фотошопы капибар.</p>
                     </div>
