--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <title>Добро пожаловать</title>
   </head>
   <body class="bd">
-    <img src="./src/index/mobile.png" style="display: none" />
-    <img src="./src/index/mobile_red.png" style="display: none" />
-    <img src="./src/index/mobile_orange.png" style="display: none" />
+    <img src="./src/index/mobile.webp" style="display: none" />
+    <img src="./src/index/mobile_red.webp" style="display: none" />
+    <img src="./src/index/mobile_orange.webp" style="display: none" />
     <nav class="navbar">
       <div class="mx-auto my-2 order-1 order-md-1 position-relative">
         <span class="animatedtext-content">
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-top" src="./src/index/JS.png" alt="Javascript" />
+              <img class="card-img-top" src="./src/index/JS.webp" alt="Javascript" />
               <div class="card-body">
                 <h5 class="card-title">Javascript</h5>
                 <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
@@ -82,7 +82,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/index/CSS.png" alt="Cascading Style Sheets" />
+              <img class="card-img-bottom" src="./src/index/CSS.webp" alt="Cascading Style Sheets" />
               <div class="card-body">
                 <h5 class="card-title">CSS</h5>
                 <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/index/HTML.png" alt="HyperText Markup Language" />
+              <img class="card-img-bottom" src="./src/index/HTML.webp" alt="HyperText Markup Language" />
               <div class="card-body">
                 <h5 class="card-title">HTML</h5>
                 <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
@@ -147,7 +147,7 @@
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" loading="lazy" src="./src/index/cppSharp.png" alt="C++ / C#" />
+              <img class="card-img-bottom" loading="lazy" src="./src/index/cppSharp.webp" alt="C++ / C#" />
               <div class="card-body">
                 <h5 class="card-title">C++ / C#</h5>
                 <p class="card-text">Объекто-ориентированные языки программирования промежуточного уровня.</p>
@@ -159,7 +159,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" loading="lazy" src="./src/index/bd.png" alt="Structured Query Language" />
+              <img class="card-img-bottom" loading="lazy" src="./src/index/bd.webp" alt="Structured Query Language" />
               <div class="card-body">
                 <h5 class="card-title">SQL</h5>
                 <p class="card-text">Декларативный язык программирования, применяемый для управления данными в реляционной базе данных.</p>
@@ -171,7 +171,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
-              <img class="card-img-bottom" loading="lazy" src="./src/index/Python.png" alt="Python" />
+              <img class="card-img-bottom" loading="lazy" src="./src/index/Python.webp" alt="Python" />
               <div class="card-body">
                 <h5 class="card-title">Python</h5>
                 <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C.</p>
@@ -217,19 +217,19 @@
     </div>
     <div class="main" style="padding-top: 2rem">
       <div class="dsc">
-        <img loading="lazy" src="./src/index/eth.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/index/eth.webp" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Блокчейн</h2>
         <h3 class="h3d">Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</h3>
         <hr class="hr" style="margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./src/index/web.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/index/web.webp" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Web разработка</h2>
         <h3 class="h3d">WEB-разработка — процедура создания WEB-приложения или WEB-сайта. Основными этапами этого процесса являются такие мероприятия, как WEB-дизайн, вёрстка страниц сайта, программирование на стороне сервера и клиента, а также работы по конфигурированию сервера.</h3>
         <hr class="hr" style="margin-bottom: -0.5rem" />
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./src/index/meow.png" class="dsc-img rounded float-left" alt="..." />
+        <img loading="lazy" src="./src/index/meow.webp" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Котики</h2>
         <h3 class="h3d">Лол, здесь нужно что-то объяснять? Котики классные.</h3>
       </div>
@@ -245,7 +245,7 @@
           <div class="row">
             <div class="col-sm-4 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-                <img class="card-img-top" src="./src/index/like.png" alt="просто пикча" />
+                <img class="card-img-top" src="./src/index/like.webp" alt="просто пикча" />
                 <div class="card-body">
                   <h5 class="card-title">Понравился сайт? :D</h5>
                   <p class="card-text">У него открытый исходный код, который размещён на GitHub.</p>
@@ -255,7 +255,7 @@
             <div class="col-sm-8 d-inline-flex">
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
-                  <img class="card-img-bottom" loading="lazy" src="./src/index/gh.png" alt="GitHub preview pic" />
+                  <img class="card-img-bottom" loading="lazy" src="./src/index/gh.webp" alt="GitHub preview pic" />
                   <div class="card-body">
                     <h5 class="card-title">Репозиторий Github</h5>
                     <p class="card-text">Жмякни сюда. Все исходники находятся здесь :)</p>
@@ -310,7 +310,7 @@
               <div class="carousel-item active">
                 <div class="col-xl-6 mx-auto">
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
-                    <img class="card-img-bottom" loading="lazy" src="./src/index/inst.png" alt="Основной аккаунт." />
+                    <img class="card-img-bottom" loading="lazy" src="./src/index/inst.webp" alt="Основной аккаунт." />
                     <div class="card-body">
                       <h5 class="card-title">Instagram</h5>
                       <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
@@ -322,7 +322,7 @@
               <div class="carousel-item">
                 <div class="col-xl-6 mx-auto">
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
-                    <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.png" alt="Фотошопы капибар." />
+                    <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.webp" alt="Фотошопы капибар." />
                     <div class="card-body">
                       <h5 class="card-title">Instagram</h5>
                       <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
@@ -334,7 +334,7 @@
               <div class="carousel-item">
                 <div class="col-xl-6 mx-auto">
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
-                    <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.png" alt="Twitch" />
+                    <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.webp" alt="Twitch" />
                     <div class="card-body">
                       <h5 class="card-title">Twitch</h5>
                       <a href="https://twitch.tv/kotru12" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
@@ -396,7 +396,7 @@
               Остались вопросы?<br />
               Напиши на почту :D
             </h3>
-            <a href="mailto:kotikovdev@gmail.com"><img id="myImg" src="./src/index/Static.png" class="Mail" loading="lazy" /></a>
+            <a href="mailto:kotikovdev@gmail.com"><img id="myImg" src="./src/index/Static.webp" class="Mail" loading="lazy" /></a>
           </div>
         </div>
       </div>
@@ -536,7 +536,7 @@
             $(this).attr("src", "./src/index/Live.gif");
           },
           function () {
-            $(this).attr("src", "./src/index/Static.png");
+            $(this).attr("src", "./src/index/Static.webp");
           }
         );
       });
