image scaling fix

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/index/mobile.webp" style="width: 100%" />
+          <img src="./src/index/mobile.webp" style="max-width: 100vw" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/index/mobile_red.webp" style="width: 100%" class="" />
+          <img src="./src/index/mobile_red.webp" style="max-width: 100vw" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/index/mobile_orange.webp" style="width: 100%" />
+          <img src="./src/index/mobile_orange.webp" style="max-width: 100vw" />
         </div>
       </div>
     </div>
