--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 <div class="row">&nbsp;&nbsp;lose any unsaved information in all applications.</div>
 <div class="row">&nbsp;</div>
 <div class="centered_btn">
-  <button class="btn" onclick="window.location.href='./index.html'">Вернуться</button>
+  <button class="btn" onclick="window.location.href='./index.html'">Вернуться назад</button>
 </div>
 
 <style>
