--- a/404.html
+++ b/404.html
@@ -76,6 +76,7 @@
     text-align: left;
     padding-top: 2%;
     padding-left: 2%;
+    padding-right: 2%;
     padding-bottom: 2%;
     margin-top: 20px;
     background-color: #bbb;
