--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:site_name" content="Арсений Котиков" />
     <meta property="og:image:secure_url" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta property="og:image" content="https://kotikov.pages.dev/src/index/web_preview.png" />
+    <meta name="description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:card" content="https://kotikov.pages.dev/src/index/web_preview.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Описание? Ну и что мне сюда написать?..." />
