--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/index/mobile.webp" style="max-width: 100vw" />
+          <img src="./src/index/mobile.webp" style="max-width: 100vw" alt="Синяя аниме пикча 1/3" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/index/mobile_red.webp" style="max-width: 100vw" />
+          <img src="./src/index/mobile_red.webp" style="max-width: 100vw" alt="Красная аниме пикча 2/3" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="./src/index/mobile_orange.webp" style="max-width: 100vw" />
+          <img src="./src/index/mobile_orange.webp" style="max-width: 100vw" alt="Оранжевая аниме пикча 3/3" />
         </div>
       </div>
     </div>
@@ -394,7 +394,7 @@
               Остались вопросы?<br />
               Напиши на почту :D
             </h3>
-            <a href="mailto:kotikovdev@gmail.com"><img id="myImg" src="./src/index/Static.webp" class="Mail" loading="lazy" /></a>
+            <a href="mailto:kotikovdev@gmail.com"><img id="myImg" src="./src/index/Static.webp" class="Mail" loading="lazy" alt="почта" /></a>
           </div>
         </div>
       </div>
