--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               </div>
             </div>
             <div class="col-sm-8 d-inline-flex">
-              <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+              <div class="card linked" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
                   <img class="card-img-bottom" loading="lazy" src="./src/index/gh.webp" alt="GitHub preview pic" />
                   <div class="card-body">
