--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <h2 class="h2xl text-center"><span class="animatedtext-content">Чем я интересуюсь❓</span></h2>
       <p></p>
     </div>
-    <div class="container progress-bar-animated">
+    <div class="container progress-bar-animated" style="margin-bottom: -2rem">
       <svg id="wave" style="transform: rotate(180deg); transition: 0.3s" class="svg" viewBox="0 0 1440 150" version="1.1">
         <defs>
           <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
@@ -361,7 +361,7 @@
         <p></p>
       </div>
     </div>
-    <div class="container progress-bar-animated">
+    <div class="container progress-bar-animated" style="box-shadow: 0 20px 15px #1d1d1d">
       <svg id="wave" style="transform: rotate(180deg); transition: 0.3s" class="svg" viewBox="0 0 1440 150" version="1.1">
         <defs>
           <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
@@ -387,7 +387,7 @@
         ></path>
       </svg>
     </div>
-    <div class="main dsc-end-main" style="margin-bottom: -2rem; padding-top: 3rem">
+    <div class="main dsc-end-main" style="margin-bottom: -2rem; padding-top: 3rem; background-image: url(./src/index/cookie.webp); background-size: 10%">
       <div class="row">
         <div class="col" align="center">
           <div class="dsc-end rounded">
@@ -402,7 +402,7 @@
       <p></p>
       <hr class="hr" />
     </div>
-    <div class="main padding">
+    <div class="main padding" style="box-shadow: 0 -20px 15px #1d1d1d">
       <h2 class="h2x text-center" style="color: #6255da"><a href="#" class="rgbtext-blue">Arsenij Kotikov©</a>, 2022</h2>
       <h2 class="h2x text-center" style="color: #dab055">Спасибо, <a class="rgbtext" href="https://www.cloudflare.com/">Сloudflare</a></h2>
     </div>
