--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
 
-      <div class="main-transparent highlighted" style="background-color: #1d1d1da1 !important">
+      <div class="main-transparent highlighted" style="background-color: #1d1d1da1 !important; backdrop-filter: blur(5px)">
         <p></p>
         <h2 class="h2xl text-center">Что я учу/планирую выучить?</h2>
         <p></p>
@@ -188,7 +188,7 @@
       <h2 class="h2xl text-center"><span class="animatedtext-content">Чем я интересуюсь❓</span></h2>
       <p></p>
     </div>
-    <div class="container progress-bar-animated" style="margin-bottom: -2rem">
+    <div class="container progress-bar-animated">
       <svg id="wave" style="transform: rotate(180deg); transition: 0.3s" class="svg" viewBox="0 0 1440 150" version="1.1">
         <defs>
           <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
@@ -355,7 +355,7 @@
         </button>
       </div>
 
-      <div class="main-transparent highlighted" style="background-color: #1d1d1da1 !important">
+      <div class="main-transparent highlighted" style="background-color: #1d1d1da1 !important; backdrop-filter: blur(5px)">
         <p></p>
         <h2 class="h2xl text-center">🔥 сайт ещё в разработке.</h2>
         <p></p>
