--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         ></path>
       </svg>
     </div>
-    <div class="main" style="padding-top: 2rem">
+    <div class="main">
       <div class="dsc">
         <img loading="lazy" src="./src/index/eth.webp" class="dsc-img rounded float-left" alt="..." />
         <h2 class="h2xld">Блокчейн</h2>
