--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="main linear-bg" style="box-shadow: 0 -10px 20px 10px rgba(17, 16, 29, 0.5)">
-      <p class="lead"></p>
+    <div class="main linear-bg" style="box-shadow: 0 -10px 20px 10px rgba(17, 16, 29, 0.5); padding-top: 2rem">
       <h1 class="h1 text-center"><span class="animatedtext-content">Привет!</span></h1>
       <h3 class="h3 text-center" style="margin-left: 1rem; margin-right: 1rem">тут нужно что-то написать про себя, так? Когда-нибудь я так и сделаю.</h3>
       <hr class="hr" />
@@ -402,7 +401,7 @@
       <p></p>
       <hr class="hr" />
     </div>
-    <div class="main padding" style="box-shadow: 0 -20px 15px #1d1d1d">
+    <div class="main padding" style="box-shadow: 0 -20px 15px #1d1d1d; padding-top: 1rem">
       <h2 class="h2x text-center" style="color: #6255da"><a href="#" class="rgbtext-blue">Arsenij Kotikov©</a>, 2022</h2>
       <h2 class="h2x text-center" style="color: #dab055">Спасибо, <a class="rgbtext" href="https://www.cloudflare.com/">Сloudflare</a></h2>
     </div>
