--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta property="vk:image" content="https://kotikov.pages.dev/src/index/web_preview_VK.png" />
     <link rel="image_src" href="https://kotikov.pages.dev/src/index/web_preview.png" />
+    <link rel="icon" type="image/x-icon" href="./src/favicon.ico" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
