idk, code refactoring

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href="custom.css" rel="stylesheet" />
     <title>Добро пожаловать</title>
   </head>
+  <img src="./src/index/cat.webp" style="display: none" />
   <body class="bd">
     <nav class="navbar">
       <div class="mx-auto my-2 order-1 order-md-1 position-relative">
@@ -311,9 +312,9 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/inst.webp" alt="Основной аккаунт." />
                     <div class="card-body">
-                      <h5 class="card-title">Instagram</h5>
+                      <h5 class="card-title-special">Instagram</h5>
                       <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
-                      <p class="card-text">Основной аккаунт.</p>
+                      <p class="card-text-special">Основной аккаунт.</p>
                     </div>
                   </div>
                 </div>
@@ -323,9 +324,9 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.webp" alt="Фотошопы капибар." />
                     <div class="card-body">
-                      <h5 class="card-title">Instagram</h5>
+                      <h5 class="card-title-special">Instagram</h5>
                       <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
-                      <p class="card-text">Фотошопы капибар.</p>
+                      <p class="card-text-special">Фотошопы капибар.</p>
                     </div>
                   </div>
                 </div>
@@ -335,9 +336,9 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.webp" alt="Twitch" />
                     <div class="card-body">
-                      <h5 class="card-title">Twitch</h5>
+                      <h5 class="card-title-special">Twitch</h5>
                       <a href="https://twitch.tv/kotru12" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
-                      <p class="card-text">Зачем? Пусть будет.</p>
+                      <p class="card-text-special">Зачем? Пусть будет.</p>
                     </div>
                   </div>
                 </div>
