--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:creator" content="@arsenij_kotikov" />
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta property="vk:image" content="https://kotikov.pages.dev/src/index/web_preview_VK.png" />
-    <link rel="preload" href="./src/index/cat.webp" />
+    <link rel="prefetch" href="./src/index/cat.webp" />
     <link rel="image_src" href="https://kotikov.pages.dev/src/index/web_preview.png" />
     <link rel="icon" type="image/x-icon" href="./src/favicon.ico" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
