--- a/404.html
+++ b/404.html
@@ -33,10 +33,15 @@
       <div class="col-sm-4 m-auto">
         <div class="card" style="width: 100%; margin: 0 auto; float: center">
           <div class="card-body">
-            <h5 class="card-title" style="font-size: 10rem; text-align: center">404</h5>
-            <p class="card-text" style="text-align: center">Кажется, что-то пошло не так.</p>
-            <div class="text-center">
-              <a href="./index.html" class="btn btn-outline-primary">Вернуться назад</a>
+            <h5 class="card-title" style="font-size: 10rem; text-align: center">
+              <div class="container">
+                <p class="glitch">404</p>
+                <hr class="hr" style="margin-top: -1rem" />
+              </div>
+            </h5>
+            <p class="card-text" style="text-align: center; margin-top: -0.5rem">Кажется, что-то пошло не так.</p>
+            <div class="text-center" style="margin-top: 1rem;margin-bottom: 0.5rem">
+              <a href="./index.html" class="btn btn-outline-primary" ">Вернуться назад</a>
             </div>
           </div>
         </div>
@@ -44,23 +49,8 @@
     </div>
   </body>
   <style>
-    .img,
-    .card-title {
-      display: block;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    .card-title {
-      -webkit-animation-duration: 2s;
-      animation-duration: 2s;
-      -webkit-animation-timing-function: linear;
-      animation-timing-function: linear;
-      -webkit-animation-iteration-count: 1;
-      animation-iteration-count: 1;
-      -webkit-animation-name: glitch-anim;
-      animation-name: glitch-anim;
-      -webkit-animation-direction: alternate;
-      animation-direction: alternate;
+    body{
+      overflow: hidden;
     }
     .btn {
       animation: rgb-shadow 2s 2s;
@@ -75,134 +65,53 @@
       100% {
       }
     }
-    @keyframes glitch-anim {
+
+    body {
+      background: black;
+      color: white;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .container {
+      text-align: center;
+      height: 100%;
+    }
+
+    .glitch {
+      font-size: 8rem;
+      font-weight: bold;
+      text-transform: uppercase;
+      position: relative;
+      text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff, 0.025em 0.04em 0 #fffc00;
+      animation: glitch 525ms forwards;
+      animation-iteration-count: 3;
+    }
+
+    @keyframes glitch {
       0% {
-        opacity: 1;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        -webkit-clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
-        clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
-      }
-      2% {
-        -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        -webkit-transform: translate(-5px);
-        transform: translate(-5px);
-      }
-      6% {
-        -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        -webkit-transform: translate(5px);
-        transform: translate(5px);
-      }
-      8% {
-        -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        -webkit-transform: translate(-5px);
-        transform: translate(-5px);
-      }
-      9% {
-        -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
-        -webkit-transform: translate(0);
-        transform: translate(0);
-      }
-      10% {
-        -webkit-clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
-        clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
-        -webkit-transform: translate3d(5px, 0, 0);
-        transform: translate3d(5px, 0, 0);
-      }
-      13% {
-        -webkit-clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
-        clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-      }
-      13.1% {
-        -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        -webkit-transform: translate3d(5px, 0, 0);
-        transform: translate3d(5px, 0, 0);
+        text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff, 0.025em 0.04em 0 #fffc00;
       }
       15% {
-        -webkit-clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
-        clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
-        -webkit-transform: translate3d(5px, 0, 0);
-        transform: translate3d(5px, 0, 0);
+        text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff, 0.025em 0.04em 0 #fffc00;
       }
-      20% {
-        -webkit-clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
-        clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
-        -webkit-transform: translate3d(-5px, 0, 0);
-        transform: translate3d(-5px, 0, 0);
+      16% {
+        text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff, -0.05em -0.05em 0 #fffc00;
       }
-      20.1% {
-        -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        -webkit-transform: translate3d(5px, 0, 0);
-        transform: translate3d(5px, 0, 0);
-      }
-      25% {
-        -webkit-clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
-        clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
-        -webkit-transform: translate3d(5px, 0, 0);
-        transform: translate3d(5px, 0, 0);
-      }
-      30% {
-        -webkit-clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
-        clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
-        -webkit-transform: translate3d(-5px, 0, 0);
-        transform: translate3d(-5px, 0, 0);
-      }
-      30.1% {
-        -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-      }
-      35% {
-        -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        -webkit-transform: translate(-5px);
-        transform: translate(-5px);
-      }
-      40% {
-        -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        -webkit-transform: translate(5px);
-        transform: translate(5px);
-      }
-      45% {
-        -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        -webkit-transform: translate(-5px);
-        transform: translate(-5px);
+      49% {
+        text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff, -0.05em -0.05em 0 #fffc00;
       }
       50% {
-        -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
-        -webkit-transform: translate(0);
-        transform: translate(0);
+        text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff, 0 -0.04em 0 #fffc00;
       }
-      55% {
-        -webkit-clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
-        clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
-        -webkit-transform: translate3d(5px, 0, 0);
-        transform: translate3d(5px, 0, 0);
+      99% {
+        text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff, 0 -0.04em 0 #fffc00;
       }
-      60% {
-        -webkit-clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
-        clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        opacity: 1;
-      }
-      60.1% {
-        -webkit-clip-path: polygon(0 0, 0 10%, 0 100%, 0 0);
-        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        opacity: 1;
+      100% {
+        text-shadow: -0.05em 0 0 #00fffc, -0.025em -0.04em 0 #fc00ff, -0.04em -0.025em 0 #fffc00;
       }
       to {
-        opacity: 1;
+        text-shadow: none;
       }
     }
   </style>
