--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         </div>
       </div>
       <p></p>
-      <hr class="hr" />
+      <hr style="opacity: 0.3; display: block; position: sticky; margin-top: 2rem; margin-left: 1rem; margin-right: 1rem; color: rgb(255, 255, 255)" />
     </div>
     <div class="main padding" style="box-shadow: 0 -20px 15px #1d1d1d; padding-top: 1rem">
       <h2 class="h2x text-center" style="color: #6255da"><a href="#" class="rgbtext-blue">Arsenij Kotikov©</a>, 2022</h2>
