--- a/404.html
+++ b/404.html
@@ -28,19 +28,19 @@
     <link href="custom.css" rel="stylesheet" />
     <title>404 Not Found</title>
   </head>
-  <body style="background-color: blue" class="progress-bar-striped progress-bar-animated">
+  <body style="background-color: #1d1d1d" class="progress-bar-striped progress-bar-animated">
     <div style="margin: 1rem; margin-top: 10rem">
       <div class="col-sm-4 m-auto">
-        <div class="card" style="width: 100%; margin: 0 auto; float: center">
-          <div class="card-body">
+        <div class="card" style="width: 90%;max-width: 50vh; margin: 0 auto; float: center">
+          <div class="card-body" style="padding-top: 6vh;">
             <h5 class="card-title" style="font-size: 10rem; text-align: center">
               <div class="container">
                 <p class="glitch">404</p>
                 <hr class="hr" style="margin-top: -1rem" />
               </div>
             </h5>
-            <p class="card-text" style="text-align: center; margin-top: -0.5rem">Кажется, что-то пошло не так.</p>
-            <div class="text-center" style="margin-top: 1rem;margin-bottom: 0.5rem">
+            <p class="card-text" style="text-align: center; margin-top: -0.5rem; ">Кажется, что-то пошло не так.</p>
+            <div class="text-center" style="margin-top: 4rem;margin-bottom: 0.5rem; ">
               <a href="./index.html" class="btn btn-outline-primary" ">Вернуться назад</a>
             </div>
           </div>
@@ -79,7 +79,7 @@
     }
 
     .glitch {
-      font-size: 8rem;
+      font-size: 10rem;
       font-weight: bold;
       text-transform: uppercase;
       position: relative;
@@ -113,6 +113,9 @@
       to {
         text-shadow: none;
       }
+    }
+    .card{
+      min-height: 50vh;
     }
   </style>
 </html>
