--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <img class="card-img-bottom" loading="lazy" src="./src/index/inst.webp" alt="Основной аккаунт." />
                     <div class="card-body">
                       <h5 class="card-title-special">Instagram</h5>
-                      <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
+                      <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary bettertouch" style="float: right; margin-top: -1rem">Проверить</a>
                       <p class="card-text-special">Основной аккаунт.</p>
                     </div>
                   </div>
@@ -326,7 +326,7 @@
                     <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.webp" alt="Фотошопы капибар." />
                     <div class="card-body">
                       <h5 class="card-title-special">Instagram</h5>
-                      <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
+                      <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary bettertouch" style="float: right; margin-top: -1rem">Проверить</a>
                       <p class="card-text-special">Фотошопы капибар.</p>
                     </div>
                   </div>
@@ -338,7 +338,7 @@
                     <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.webp" alt="Twitch" />
                     <div class="card-body">
                       <h5 class="card-title-special">Twitch</h5>
-                      <a href="https://twitch.tv/kotru12" class="btn btn-outline-primary" style="float: right; margin-top: -1rem">Проверить</a>
+                      <a href="https://twitch.tv/kotru12" class="btn btn-outline-primary bettertouch" style="float: right; margin-top: -1rem">Проверить</a>
                       <p class="card-text-special">Зачем? Пусть будет.</p>
                     </div>
                   </div>
