--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.8/jquery.viewportchecker.min.js" integrity="sha512-FRX6MYITclzDyyMmSQLgZoZTfE+GLzAQpjs15adVZMY6AqhsrBLx8UZwp4FoqrrRFWY9TiaPwja7EY5fk309vw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="ViewportAnim.js"></script>
-    <link href="custom.css" rel="stylesheet" />
+    <link href="https://kotikov.pages.dev/custom.css" rel="stylesheet" />
     <title>404 Not Found</title>
   </head>
   <body style="background-color: #1d1d1d" class="progress-bar-striped progress-bar-animated">
