--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
             </h5>
             <p class="card-text" style="text-align: center; margin-top: -0.5rem; ">Кажется, что-то пошло не так.</p>
             <div class="text-center" style="margin-top: 4rem;margin-bottom: 0.5rem; ">
-              <a href="kotikov.pages.dev/index.html" class="btn btn-outline-primary" ">Вернуться назад</a>
+              <a href="https://kotikov.pages.dev/index.html" class="btn btn-outline-primary" ">Вернуться назад</a>
             </div>
           </div>
         </div>
