--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <script>
+      function check(){
+        var info = window.screen.width;
+        console.log(info);
+        if (info >= 921) {
+          window.location.href="pc_index.html";
+        }
+      };
+      check()
+    </script>
     <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale="1.0" maximum-scale="1.0" user-scalable="no" />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:site_name" content="Арсений Котиков" />
