--- a/pc_index.html
+++ b/pc_index.html
@@ -103,11 +103,6 @@
         <p>Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</p>
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./src/index/meow.webp" class="dsc-img rounded" alt="..." />
-        <h1 class="Contenth1">Котики</h1>
-        <p>Лол, здесь нужно что-то объяснять? Котики классные.</p>
-      </div>
-      <div class="dsc">
         <img loading="lazy" src="./deeplearning.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Нейронные сети</h1>
         <p>Нейро́нная сеть — математическая модель, а также её программное или аппаратное воплощение, построенная по принципу организации и функционирования биологических нейронных сетей — сетей нервных клеток живого организма.</p>
@@ -116,6 +111,11 @@
         <img loading="lazy" src="./gamepad.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Игры</h1>
         <p>Кому-то не нравятся компьютерные игры? Серьёзно?</p>
+      </div>
+      <div class="dsc">
+        <img loading="lazy" src="./pc_cat.png" class="dsc-img rounded" alt="..." />
+        <h1 class="Contenth1">Котики</h1>
+        <p>Лол, здесь нужно что-то объяснять? Котики классные.</p>
       </div>
 
       <div class="innerh1">
