background-image fix

--- a/pc_index.html
+++ b/pc_index.html
@@ -281,7 +281,7 @@
           background-color: rgb(0, 0, 0);
           color: white;
           font-family: sans-serif;
-          background-image: url("./code.png");
+          background-image: url("./src/pc_index/code.png");
           background-size: 15%;
           overflow-x: hidden;
         }
